crates/etas_tests/fixtures/compiler/projects/negative/effect_checked_index_05/src/app/effects/model.es
module app.effects.model;

public type EffectInput = {
    body: string,
};

public flow sample_input() -> EffectInput ![]
{
    return EffectInput { body = "negative project effect" };
}
